--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -157,7 +157,7 @@
                     android:layout_width="match_parent"
                     android:textColor="#111111"
                     android:layout_height="wrap_content"
-                    android:text="Clean up database of RNC (no logs)" />
+                    android:text="Clean up all databases (with logs)" />
             </LinearLayout>
 
         </RelativeLayout>
