--- a/app/src/main/res/layout/activity_export_logs.xml
+++ b/app/src/main/res/layout/activity_export_logs.xml
@@ -60,44 +60,6 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/lyt_export_info_count_log_umts"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/txt_export_count_i_umts"
-                        android:layout_width="180dp"
-                        android:textColor="#111111"
-                        android:layout_height="wrap_content"
-                        android:text="Number to export (UMTS) :" />
-                    <TextView
-                        android:id="@+id/txt_export_count_umts"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="sdfdz" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/lyt_export_info_count_log_lte"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/txt_export_count_i_lte"
-                        android:layout_width="180dp"
-                        android:textColor="#111111"
-                        android:layout_height="wrap_content"
-                        android:text="Number to export (LTE) :" />
-                    <TextView
-                        android:id="@+id/txt_export_count_lte"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="sdfdz" />
-                </LinearLayout>
-
-                <LinearLayout
                     android:id="@+id/lyt_cell_info_cid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -123,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lyt_export_info"
                 android:layout_marginBottom="5dp"
-                android:orientation="vertical" >
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/txt_import_text_nickname"
@@ -143,42 +105,16 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/lyt_import_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/lyt_import_text"
-                android:layout_marginBottom="5dp"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/txt_import_text_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#111111"
-                    android:text="Name of export (example: dept 90) :" />
-
-                <EditText
-                    android:id="@+id/inp_import_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="14dp"
-                    android:backgroundTint="@color/colorPrimary"
-                    android:focusableInTouchMode="true" />
-
-            </LinearLayout>
-
 
             <LinearLayout
                 android:id="@+id/lyt_cell_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/lyt_import_name"
                 android:layout_marginBottom="5dp"
                 android:weightSum="2"
                 android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center"
+                android:layout_below="@id/lyt_import_text">
 
                 <Button
                     android:id="@+id/btn_export_logs"
