--- a/app/src/main/res/layout/listview_monitor_main_lte.xml
+++ b/app/src/main/res/layout/listview_monitor_main_lte.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/txt_freq_sect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Freq"
+                android:text=""
                 android:textColor="#888888"
                 android:textSize="18dp"
                 android:layout_marginLeft="10dp"/>
